--- a/Ibanez Artcore AS73.html
+++ b/Ibanez Artcore AS73.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telecaster (Player Series) - Details</title>
-    <link rel="stylesheet" href="productdetail.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Ibanez Artcore AS73 - Details</title>
+    <link rel="stylesheet" href="productdetail.css" />
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet">
 
 </head>
 <body>
-   <header>
+    <header>
     <div class="logo">Guitar Shop</div>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <nav id="navbar">
@@ -20,29 +20,30 @@
         </ul>
     </nav>
 </header>
+
     <main>
         <div class="product-detail">
-            <h1>Telecaster (Player Series)</h1>
-            <p class="product-description">
-    The Telecaster Player Series is a workhorse guitar with a bright, cutting tone and durable build. A reliable choice for all music styles, from country to rock.
+           <h1>Ibanez Artcore AS73</h1>
+           <p class="product-description">
+    This semi-hollow body guitar combines warm, jazzy tones with the playability of a solid body. Perfect for blues, jazz, and classic rock enthusiasts who want rich resonance and vintage style at an affordable price.
 </p>
             <div class="product-images">
-                <img src="images/Telecaster (Player Series).webp" alt="Telecaster Player">
-                <img src="fenderdetails/Telecaster (Player Series)-1.jpeg" alt="Telecaster Detail 1">
-                <img src="fenderdetails/Telecaster (Player Series)-2.jpg" alt="Telecaster Detail 2">
-                <img src="fenderdetails/Telecaster (Player Series)-3.jpg" alt="Telecaster Detail 3">
+                <img src="images/Ibanez Artcore AS73.jpg" alt="AZ Series Premium Prestige" />
+                <img src="ibanezdetails/Ibanez Artcore AS73-1.jpg" alt="Ibanez Artcore AS73-1" />
+                <img src="ibanezdetails/Ibanez Artcore AS73-2.jpg" alt="Ibanez Artcore AS73-2" />
+                <img src="ibanezdetails/Ibanez Artcore AS73-3.jpeg" alt="Ibanez Artcore AS73-3" />
             </div>
-            <p class="price">Price: $700</p>
-            <button class="add-to-cart" onclick="addToCart('Telecaster (Player Series)', 700)">Add to Cart</button>
+            <p class="price">Price: $400</p>
+            <button class="add-to-cart" onclick="addToCart('Ibanez Artcore AS73', 400)">Add to Cart</button>
         </div>
     </main>
-
-    <footer>
-        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
-    </footer>
 <a href="cart.html" class="floating-cart">
     🛒 <span id="floating-cart-count">0</span>
 </a>
+    <footer>
+        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+    </footer>
+
     <script>
        function addToCart(productName, productPrice) {
         let cart = JSON.parse(localStorage.getItem('cart')) || [];
@@ -91,7 +92,7 @@ window.addEventListener('load', updateFloatingCartCount);
 
     </script>
 
-    <!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
