--- a/return.html
+++ b/return.html
@@ -32,7 +32,7 @@
     
     <h3>2. Return Process</h3>
     <ol>
-      <li>Contact our Customer Service at <a href="mailto:support@guitarestore.com">support@guitarestore.com</a> or via the Contact page to request a return authorization.</li>
+      <li>Contact our Customer Service at <a href="mailto:guitarestore@outlook.com">guitarestore@outlook.com</a> or via the Contact page to request a return authorization.</li>
       <li>Provide your order number, reason for return, and photos if applicable.</li>
       <li>Once approved, we will provide you with a return shipping label and instructions.</li>
       <li>Ship the product back to us within 7 days of receiving the return label.</li>
@@ -59,13 +59,13 @@
     <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
   </footer>
 
-  <!--Start of Tawk.to Script-->
+   <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
 var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 s1.async=true;
-s1.src='https://embed.tawk.to/68630d3893bfc5190ef8477d/1iv1en9gi';
+s1.src='https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
 s1.charset='UTF-8';
 s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
