--- a/Epiphone Les Paul Standard PlusTop Pro.html
+++ b/Epiphone Les Paul Standard PlusTop Pro.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telecaster (Player Series) - Details</title>
-    <link rel="stylesheet" href="productdetail.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Epiphone Les Paul Standard PlusTop Pro - Details</title>
+    <link rel="stylesheet" href="productdetail.css" />
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet">
 
 </head>
 <body>
-   <header>
+    <header>
     <div class="logo">Guitar Shop</div>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <nav id="navbar">
@@ -20,29 +20,31 @@
         </ul>
     </nav>
 </header>
+
     <main>
         <div class="product-detail">
-            <h1>Telecaster (Player Series)</h1>
-            <p class="product-description">
-    The Telecaster Player Series is a workhorse guitar with a bright, cutting tone and durable build. A reliable choice for all music styles, from country to rock.
-</p>
+           <h1>Epiphone Les Paul Standard PlusTop Pro</h1>
+
+        <p class="product-description">
+            A budget-friendly alternative from Gibson’s sister brand, this guitar delivers classic Les Paul tones with ProBucker pickups and a stunning flame maple top. It’s a perfect entry point into the Gibson sound family.
+        </p>
             <div class="product-images">
-                <img src="images/Telecaster (Player Series).webp" alt="Telecaster Player">
-                <img src="fenderdetails/Telecaster (Player Series)-1.jpeg" alt="Telecaster Detail 1">
-                <img src="fenderdetails/Telecaster (Player Series)-2.jpg" alt="Telecaster Detail 2">
-                <img src="fenderdetails/Telecaster (Player Series)-3.jpg" alt="Telecaster Detail 3">
+                <img src="images/Epiphone Les Paul Standard PlusTop Pro.jpg" alt="Epiphone Les Paul Standard PlusTop Pro" />
+                <img src="gibsondetails/Epiphone Les Paul Standard PlusTop Pro-1.jpeg" alt="Epiphone Les Paul Standard PlusTop Pro-1" />
+                <img src="gibsondetails/Epiphone Les Paul Standard PlusTop Pro-2.jpeg" alt="Epiphone Les Paul Standard PlusTop Pro-2" />
+                <img src="gibsondetails/Epiphone Les Paul Standard PlusTop Pro-3.jpg" alt="Epiphone Les Paul Standard PlusTop Pro-3" />
             </div>
-            <p class="price">Price: $700</p>
-            <button class="add-to-cart" onclick="addToCart('Telecaster (Player Series)', 700)">Add to Cart</button>
+            <p class="price">Price: $500</p>
+            <button class="add-to-cart" onclick="addToCart('Epiphone Les Paul Standard PlusTop Pro', 500)">Add to Cart</button>
         </div>
     </main>
-
-    <footer>
-        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
-    </footer>
 <a href="cart.html" class="floating-cart">
     🛒 <span id="floating-cart-count">0</span>
 </a>
+    <footer>
+        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+    </footer>
+
     <script>
        function addToCart(productName, productPrice) {
         let cart = JSON.parse(localStorage.getItem('cart')) || [];
@@ -91,7 +93,7 @@ window.addEventListener('load', updateFloatingCartCount);
 
     </script>
 
-    <!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
