--- a/Ibanez GRX70QA.html
+++ b/Ibanez GRX70QA.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telecaster (Player Series) - Details</title>
-    <link rel="stylesheet" href="productdetail.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Ibanez GRX70QA - Details</title>
+    <link rel="stylesheet" href="productdetail.css" />
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet">
 
 </head>
 <body>
-   <header>
+    <header>
     <div class="logo">Guitar Shop</div>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <nav id="navbar">
@@ -20,29 +20,31 @@
         </ul>
     </nav>
 </header>
+
     <main>
         <div class="product-detail">
-            <h1>Telecaster (Player Series)</h1>
-            <p class="product-description">
-    The Telecaster Player Series is a workhorse guitar with a bright, cutting tone and durable build. A reliable choice for all music styles, from country to rock.
-</p>
+           <h1>Ibanez GRX70QA</h1>
+
+        <p class="product-description">
+           Ideal for beginners and casual players, the GRX70QA offers a comfortable feel and versatile sound. Its quilted maple finish adds style, while its quality build provides great value in an affordable package.
+        </p>
             <div class="product-images">
-                <img src="images/Telecaster (Player Series).webp" alt="Telecaster Player">
-                <img src="fenderdetails/Telecaster (Player Series)-1.jpeg" alt="Telecaster Detail 1">
-                <img src="fenderdetails/Telecaster (Player Series)-2.jpg" alt="Telecaster Detail 2">
-                <img src="fenderdetails/Telecaster (Player Series)-3.jpg" alt="Telecaster Detail 3">
+                <img src="images/Ibanez GRX70QA.jpeg" alt="Ibanez GRX70QA" />
+                <img src="ibanezdetails/Ibanez GRX70QA-1.jpg" alt="Ibanez GRX70QA-1" />
+                <img src="ibanezdetails/Ibanez GRX70QA-2.jpg" alt="Ibanez GRX70QA-2" />
+                <img src="ibanezdetails/Ibanez GRX70QA-3.jpg" alt="Ibanez GRX70QA-3" />
             </div>
-            <p class="price">Price: $700</p>
-            <button class="add-to-cart" onclick="addToCart('Telecaster (Player Series)', 700)">Add to Cart</button>
+            <p class="price">Price: $250</p>
+            <button class="add-to-cart" onclick="addToCart('Ibanez GRX70QA', 250)">Add to Cart</button>
         </div>
     </main>
-
-    <footer>
-        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
-    </footer>
 <a href="cart.html" class="floating-cart">
     🛒 <span id="floating-cart-count">0</span>
 </a>
+    <footer>
+        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+    </footer>
+
     <script>
        function addToCart(productName, productPrice) {
         let cart = JSON.parse(localStorage.getItem('cart')) || [];
@@ -91,7 +93,7 @@ window.addEventListener('load', updateFloatingCartCount);
 
     </script>
 
-    <!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
