--- a/checkout.html
+++ b/checkout.html
@@ -1,119 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout - Guitar Shop</title>
-    <link rel="stylesheet" href="checkout.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Checkout - Guitar Shop</title>
+  <link rel="stylesheet" href="checkout.css" />
+  <style>
+    /* Quick styles for the success message */
+    #success-message {
+      display: none;
+      margin-top: 20px;
+      padding: 15px;
+      border-radius: 8px;
+      background-color: #d4edda;
+      color: #155724;
+      font-family: 'Merriweather', serif;
+      box-shadow: 0 2px 6px rgba(21, 87, 36, 0.3);
+    }
+  </style>
 </head>
 <body>
 
 <header>
-    <div class="logo">Checkout</div>
-    <nav id="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="cart.html">Cart</a></li>
-        </ul>
-    </nav>
+  <div class="logo">Checkout</div>
+  <nav id="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="cart.html">Cart</a></li>
+    </ul>
+  </nav>
 </header>
 
 <main class="checkout-container">
-    <form action="https://formsubmit.co/pixelperfectphones@outlook.com" method="POST">
-        <table id="checkout-table">
-            <thead>
-                <tr>
-                    <th>Product</th>
-                    <th>Quantity</th>
-                    <th>Colors(s)</th>
-                    <th>Price</th>
-                </tr>
-            </thead>
-            <tbody id="checkout-items">
-                <!-- Cart items will be loaded here -->
-            </tbody>
-        </table>
+  <form id="checkout-form" action="https://formsubmit.co/ajax/guitarestore@outlook.com" method="POST">
+    <table id="checkout-table">
+      <thead>
+        <tr>
+          <th>Product</th>
+          <th>Quantity</th>
+          <th>Colors(s)</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody id="checkout-items">
+        <!-- Cart items will be loaded here -->
+      </tbody>
+    </table>
 
-        <div class="total" id="total-price">Total: $0.00</div>
+    <div class="total" id="total-price">Total: $0.00</div>
 
-        <h3>Customer Information</h3>
-        <input type="text" name="Name" placeholder="Full Name" required>
-        <input type="email" name="Email" placeholder="Email Address" required>
-        <input type="tel" name="Phone" placeholder="Phone Number" required>
-        <textarea name="Shipping Address" placeholder="Shipping Address" required></textarea>
+    <h3>Customer Information</h3>
+    <input type="text" name="Name" placeholder="Full Name" required />
+    <input type="email" name="Email" placeholder="Email Address" required />
+    <input type="tel" name="Phone" placeholder="Phone Number" required />
+    <textarea name="Shipping Address" placeholder="Shipping Address" required></textarea>
 
-        <h3>Select Payment Method</h3>
-        <select name="Payment Method" required>
-            <option value="Apple Pay">Apple Pay</option>
-            <option value="Bitcoin">Bitcoin</option>
-            <option value="Gift Card">Gift Card</option>
-            <option value="PayPal">PayPal</option>
-            <option value="Venmo">Venmo</option>
-            <option value="Zelle">Zelle</option>
-        </select>
+    <h3>Select Payment Method</h3>
+    <select name="Payment Method" required>
+      <option value="Apple Pay">Apple Pay</option>
+      <option value="Bitcoin">Bitcoin</option>
+      <option value="Gift Card">Gift Card</option>
+      <option value="PayPal">PayPal</option>
+      <option value="Venmo">Venmo</option>
+      <option value="Zelle">Zelle</option>
+    </select>
 
-        <!-- Hidden field to send cart details -->
-        <textarea name="Order Details" id="order-details" style="display:none;"></textarea>
+    <!-- Hidden field to send cart details -->
+    <textarea name="Order Details" id="order-details" style="display:none;"></textarea>
 
-        <button type="submit" class="place-order-btn">Place Order</button>
-    </form>
+    <button type="submit" class="place-order-btn">Place Order</button>
+  </form>
+
+  <div id="success-message"></div>
 </main>
 
 <footer>
-    <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+  <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
 </footer>
 
 <script>
-    function loadCheckout() {
-        let cart = JSON.parse(localStorage.getItem('cart')) || [];
-        const checkoutTable = document.getElementById('checkout-items');
-        const totalPriceEl = document.getElementById('total-price');
-        const orderDetailsEl = document.getElementById('order-details');
-        let total = 0;
-        let orderSummary = '';
+  function loadCheckout() {
+    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+    const checkoutTable = document.getElementById('checkout-items');
+    const totalPriceEl = document.getElementById('total-price');
+    const orderDetailsEl = document.getElementById('order-details');
+    let total = 0;
+    let orderSummary = '';
 
-        checkoutTable.innerHTML = '';
+    checkoutTable.innerHTML = '';
 
-        cart.forEach(item => {
-            let itemTotal = item.price * item.quantity;
-            total += itemTotal;
+    cart.forEach(item => {
+      let itemTotal = item.price * item.quantity;
+      total += itemTotal;
 
-            let colorsDisplay = item.colors && item.colors.length > 0
-                ? item.colors.map(color => `<span style="display:inline-block;width:15px;height:15px;background:${color};border:1px solid #000;margin-right:5px;"></span>`).join(' ')
-                : 'No color selected';
+      const colorsText = item.colors && item.colors.length > 0 ? item.colors.join(', ') : 'No color selected';
 
-            const row = `
-                <tr>
-                    <td>${item.name}</td>
-                    <td>${item.quantity}</td>
-                    <td>${item.colors.join(', ') || 'No color selected'}</td>
-                    <td>$${itemTotal.toFixed(2)}</td>
-                </tr>
-            `;
-            checkoutTable.insertAdjacentHTML('beforeend', row);
+      const row = `
+        <tr>
+          <td>${item.name}</td>
+          <td>${item.quantity}</td>
+          <td>${colorsText}</td>
+          <td>$${itemTotal.toFixed(2)}</td>
+        </tr>
+      `;
+      checkoutTable.insertAdjacentHTML('beforeend', row);
 
-            orderSummary += `Product: ${item.name}, Quantity: ${item.quantity}, Colors: ${item.colors.join(', ') || 'None'}, Price: $${itemTotal.toFixed(2)}\n`;
-        });
+      orderSummary += `Product: ${item.name}, Quantity: ${item.quantity}, Colors: ${colorsText}, Price: $${itemTotal.toFixed(2)}\n`;
+    });
 
-        totalPriceEl.textContent = 'Total: $' + total.toFixed(2);
-        orderSummary += `Total: $${total.toFixed(2)}`;
-        orderDetailsEl.value = orderSummary;
-    }
+    totalPriceEl.textContent = 'Total: $' + total.toFixed(2);
+    orderSummary += `Total: $${total.toFixed(2)}`;
+    orderDetailsEl.value = orderSummary;
+  }
 
-    window.onload = loadCheckout;
+  window.onload = loadCheckout;
+
+  document.getElementById('checkout-form').addEventListener('submit', function (e) {
+    e.preventDefault();
+
+    const form = e.target;
+    const successMsg = document.getElementById('success-message');
+    const formData = new FormData(form);
+
+    fetch(form.action, {
+      method: 'POST',
+      body: formData,
+      headers: {
+        'Accept': 'application/json'
+      }
+    })
+      .then(response => response.json())
+      .then(data => {
+        if (data.success === "true" || data.message === "Thanks for your submission!") {
+          const orderDetails = formData.get('Order Details').replace(/\n/g, '<br>');
+          const name = formData.get('Name');
+          const email = formData.get('Email');
+          const phone = formData.get('Phone');
+          const shipping = formData.get('Shipping Address');
+          const payment = formData.get('Payment Method');
+
+          successMsg.style.display = 'block';
+          successMsg.style.color = '#155724';
+          successMsg.innerHTML = `
+            <p>Message sent! We will get back to you soon.</p>
+            <h4>Order Summary:</h4>
+            <p>${orderDetails}</p>
+            <h4>Customer Info:</h4>
+            <p><strong>Name:</strong> ${name}</p>
+            <p><strong>Email:</strong> ${email}</p>
+            <p><strong>Phone:</strong> ${phone}</p>
+            <p><strong>Shipping Address:</strong> ${shipping}</p>
+            <p><strong>Payment Method:</strong> ${payment}</p>
+          `;
+
+          form.reset();
+          localStorage.removeItem('cart');
+          loadCheckout();
+        } else {
+          successMsg.style.display = 'block';
+          successMsg.style.color = 'red';
+          successMsg.textContent = 'Oops! There was a problem sending your message.';
+        }
+      })
+      .catch(() => {
+        successMsg.style.display = 'block';
+        successMsg.style.color = 'red';
+        successMsg.textContent = 'Oops! There was a problem sending your message.';
+      });
+  });
 </script>
+
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/68630d3893bfc5190ef8477d/1iv1en9gi';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
+  var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+  (function () {
+    var s1 = document.createElement("script"),
+      s0 = document.getElementsByTagName("script")[0];
+    s1.async = true;
+    s1.src = 'https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
+    s1.charset = 'UTF-8';
+    s1.setAttribute('crossorigin', '*');
+    s0.parentNode.insertBefore(s1, s0);
+  })();
 </script>
 <!--End of Tawk.to Script-->
+
 </body>
 </html>
