Updated product descriptions and website content

--- a/Fender Squier Classic Vibe 60s Stratocaster.html
+++ b/Fender Squier Classic Vibe 60s Stratocaster.html
@@ -25,7 +25,9 @@
         <div class="product-detail">
            <h1>Fender Squier Classic Vibe 60s Stratocaster</h1>
            <p class="product-description">
-    Professional-grade instruments built for dynamic expression. The AZ Premium/Prestige offers seamless switching between rhythm and lead.
+   Vintage style meets modern playability. With Fender-designed alnico pickups, a slim comfortable neck, and a smooth tremolo system, this Strat delivers classic tone and effortless feel. Perfect for players who love that ‘60s vibe with reliable performance.
+
+Play the vibe. Feel the legend. 🎶
            </p>
 
             <div class="product-images">
